--- a/PetAdoptionHouse/index/templates/index/login.html
+++ b/PetAdoptionHouse/index/templates/index/login.html
@@ -6,8 +6,8 @@
     {% endif %}
         <form method="post">
             {% csrf_token %}
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username"><br>
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email"><br>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password"><br>
             <input type="submit" value="Login">   
