--- a/PetAdoptionHouse/index/templates/index/login.html
+++ b/PetAdoptionHouse/index/templates/index/login.html
@@ -1,15 +1,37 @@
-{% extends 'base.html' %}
+{% extends 'index/base.html' %}
 
 {% block content %}
     {% if error %}
         <p class="error"> {{ error }}</p>
     {% endif %}
-        <form method="post">
-            {% csrf_token %}
-            <label for="email">Email:</label>
-            <input type="text" id="email" name="email"><br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password"><br>
-            <input type="submit" value="Login">   
-        </form>
+        <div class="container">
+            <div class="screen">
+                <div class="screen__content">
+                    <form class="login" method="POST">
+                        {% csrf_token %}
+                        <div class="login__field">
+                            <i class="login__icon fas fa-user"></i>
+                            <input name="email" type="text" class="login__input" placeholder="Email">
+                        </div>
+                        <div class="login__field">
+                            <i class="login__icon fas fa-lock"></i>
+                            <input name="password" type="password" class="login__input" placeholder="Password">
+                        </div>
+                        <button class="button login__submit" type="submit">
+                            <span class="button__text">Log In</span>
+                            <i class="button__icon fas fa-chevron-right"></i>
+                        </button>				
+                    </form>
+                    <div class="social-login">
+                        <a class="social-login__a" href="register">Register</a>
+                    </div>
+                </div>
+                <div class="screen__background">
+                    <span class="screen__background__shape screen__background__shape4"></span>
+                    <span class="screen__background__shape screen__background__shape3"></span>		
+                    <span class="screen__background__shape screen__background__shape2"></span>
+                    <span class="screen__background__shape screen__background__shape1"></span>
+                </div>		
+            </div>
+        </div>
 {%endblock content %}
