--- a/PetAdoptionHouse/index/templates/index/static/styles.css
+++ b/PetAdoptionHouse/index/templates/index/static/styles.css
@@ -7,9 +7,13 @@
 	font-family: Raleway, sans-serif;
 }
 
+html {
+	font-size: 62.5%;
+}
+
 /* Colores */
 :root {
-  --color-olive: #556B2F;
+  --color-olive: #1d5a55;
   --color-gray-100: #f7fafc;
   --color-gray-200: #edf2f7;
   --color-gray-300: #e2e8f0;
@@ -17,8 +21,14 @@
   --color-gray-500: #a0aec0;
   --color-gray-600: #718096;
   --color-gray-700: #4a5568;
-  --color-gray-800: #2d3748;
+  --color-gray-800: #19465f;
   --color-gray-900: #2d3748;
+  --color-blug: #3aa7a7;
+  --color-greenc:#5cdbbb; 
+  --color-middle: #308b8b;
+  --color-shadows: #113244;
+  --color-darker-blug: #266969;
+
 }
 
 /* Header */
@@ -31,6 +41,7 @@
   width: 100%;
   z-index: 100;
   position: fixed;
+  box-shadow: 0px 0px 24px var(--color-shadows);
 }
 
 .header__nav {
@@ -54,6 +65,8 @@
 .header__item a {
   color: var(--color-gray-100);
   text-decoration: none;
+  padding: 1rem;
+  font-size: 1.5rem;
 }
 
 .header__item--home a {
@@ -66,7 +79,7 @@
 
 /* Botones hover */
 .header__item a:hover {
-  background-color: var(--color-gray-900);
+  background-color: var(--color-gray-800);
 }
 
 /* Footer */
@@ -80,6 +93,7 @@
   z-index: 100;
   position: fixed;
   bottom: 0;
+  box-shadow: 0px 0px 24px var(--color-shadows);
 }
 
 .footer__wrapper {
@@ -88,7 +102,7 @@
 }
 
 body {
-	background: linear-gradient(90deg, #C7C5F4, #776BCC);		
+	background: linear-gradient(90deg, var(--color-blug), var(--color-greenc));		
 }
 
 .container {
@@ -99,11 +113,11 @@ body {
 }
 
 .screen {		
-	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
+	background: linear-gradient(90deg, var(--color-darker-blug), var(--color-blug));		
 	position: relative;	
 	height: 600px;
 	width: 360px;	
-	box-shadow: 0px 0px 24px #5C5696;
+	box-shadow: 0px 0px 24px var(--color-shadows);
 }
 
 .screen__content {
@@ -140,7 +154,7 @@ body {
 .screen__background__shape2 {
 	height: 220px;
 	width: 220px;
-	background: #6C63AC;	
+	background: var(--color-middle);	
 	top: -172px;
 	right: 0;	
 	border-radius: 32px;
@@ -149,7 +163,7 @@ body {
 .screen__background__shape3 {
 	height: 540px;
 	width: 190px;
-	background: linear-gradient(270deg, #5D54A4, #6A679E);
+	background: linear-gradient(270deg,var(--color-darker-blug), var(--color-middle));
 	top: -24px;
 	right: 0;	
 	border-radius: 32px;
@@ -158,7 +172,7 @@ body {
 .screen__background__shape4 {
 	height: 400px;
 	width: 200px;
-	background: #7E7BB9;	
+	background: var(--color-middle);	
 	top: 420px;
 	right: 50px;	
 	border-radius: 60px;
@@ -178,7 +192,7 @@ body {
 .login__icon {
 	position: absolute;
 	top: 30px;
-	color: #7875B5;
+	color: var(--color-darker-blug);
 }
 
 .login__input {
@@ -196,7 +210,7 @@ body {
 .login__input:focus,
 .login__input:hover {
 	outline: none;
-	border-bottom-color: #6A679E;
+	border-bottom-color: var(--color-olive);
 }
 
 .login__submit {
@@ -205,14 +219,14 @@ body {
 	margin-top: 30px;
 	padding: 16px 20px;
 	border-radius: 26px;
-	border: 1px solid #D4D3E8;
+	border: 1px solid #d3e8e5;
 	text-transform: uppercase;
 	font-weight: 700;
 	display: flex;
 	align-items: center;
 	width: 100%;
-	color: #4C489D;
-	box-shadow: 0px 2px 2px #5C5696;
+	color: var(--color-darker-blug);
+	box-shadow: 0px 2px 2px var(--color-middle);
 	cursor: pointer;
 	transition: .2s;
 }
@@ -220,14 +234,14 @@ body {
 .login__submit:active,
 .login__submit:focus,
 .login__submit:hover {
-	border-color: #6A679E;
+	border-color: var(--color-middle);
 	outline: none;
 }
 
 .button__icon {
 	font-size: 24px;
 	margin-left: auto;
-	color: #7875B5;
+	color: var(--color-darker-blug);
 }
 
 .social-login {	
@@ -243,5 +257,5 @@ body {
 .social-login__a {
 	text-decoration: none;
 	color: #fff;
-
+	font-size: 1.5rem;
 }
