--- a/PetAdoptionHouse/index/templates/index/static/styles.css
+++ b/PetAdoptionHouse/index/templates/index/static/styles.css
@@ -249,13 +249,80 @@ body {
 	height: 140px;
 	width: 160px;
 	text-align: center;
-	bottom: 0px;
+	bottom: -6rem;
 	right: 0px;
 	color: #fff;
 }
 
 .social-login__a {
+	padding: 2rem 0rem 0rem 0rem;
 	text-decoration: none;
 	color: #fff;
 	font-size: 1.5rem;
+}
+
+.register {
+    width: 320px;
+    padding: 30px;
+    padding-top: 50px;
+}
+
+.register__field {
+    padding: 20px 0px;	
+    position: relative;	
+}
+
+.register__icon {
+    position: absolute;
+    top: 30px;
+    color: var(--color-darker-blug);
+}
+
+.register__input {
+    border: none;
+    border-bottom: 2px solid #D1D1D4;
+    background: none;
+    padding: 10px;
+    padding-left: 24px;
+    font-weight: 700;
+    width: 75%;
+    transition: .2s;
+}
+
+.register__input:active,
+.register__input:focus,
+.register__input:hover {
+    outline: none;
+    border-bottom-color: var(--color-olive);
+}
+
+.register__submit {
+    background: #fff;
+	font-size: 14px;
+	margin-top: 30px;
+	padding: 16px 20px;
+	border-radius: 26px;
+	border: 1px solid #d3e8e5;
+	text-transform: uppercase;
+	font-weight: 700;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	color: var(--color-darker-blug);
+	box-shadow: 0px 2px 2px var(--color-middle);
+	cursor: pointer;
+	transition: .2s;
+}
+
+.register__submit:active,
+.register__submit:focus,
+.register__submit:hover {
+border-color: var(--color-middle);
+outline: none;
+}
+
+.button__icon {
+font-size: 24px;
+margin-left: auto;
+color: var(--color-darker-blug);
 }
