--- a/PetAdoptionHouse/index/templates/index/base.html
+++ b/PetAdoptionHouse/index/templates/index/base.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>{% block title %}{% endblock title %}</title>
   <link rel="stylesheet" type="text/css" href="{% static 'index/static/styles.css' %}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
 
