--- a/PetAdoptionHouse/index/templates/index/static/styles.css
+++ b/PetAdoptionHouse/index/templates/index/static/styles.css
@@ -1,328 +1,325 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
-
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;	
-	font-family: Raleway, sans-serif;
+ 
+  @font-face {
+	font-family: 'Font Awesome';
+	src: url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/webfonts/fa-solid-900.woff2') format('woff2');
+	font-display: swap;
+  }
+ * {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     font-family: Raleway, sans-serif;
 }
-
-html {
-	font-size: 62.5%;
+ html {
+     font-size: 62.5%;
 }
-
 /* Colores */
-:root {
-  --color-olive: #1d5a55;
-  --color-gray-100: #f7fafc;
-  --color-gray-200: #edf2f7;
-  --color-gray-300: #e2e8f0;
-  --color-gray-400: #cbd5e0;
-  --color-gray-500: #a0aec0;
-  --color-gray-600: #718096;
-  --color-gray-700: #4a5568;
-  --color-gray-800: #19465f;
-  --color-gray-900: #2d3748;
-  --color-blug: #3aa7a7;
-  --color-greenc:#5cdbbb; 
-  --color-middle: #308b8b;
-  --color-shadows: #113244;
-  --color-darker-blug: #266969;
-
+ :root {
+     --color-olive: #1d5a55;
+     --color-gray-100: #f7fafc;
+     --color-gray-200: #edf2f7;
+     --color-gray-300: #e2e8f0;
+     --color-gray-400: #cbd5e0;
+     --color-gray-500: #a0aec0;
+     --color-gray-600: #718096;
+     --color-gray-700: #4a5568;
+     --color-gray-800: #19465f;
+     --color-gray-900: #2d3748;
+     --color-blug: #3aa7a7;
+     --color-greenc:#5cdbbb;
+     --color-middle: #308b8b;
+     --color-shadows: #113244;
+     --color-darker-blug: #266969;
 }
-
 /* Header */
-.header {
-  background-color: var(--color-olive);
-  color: var(--color-gray-100);
-  padding: 1rem;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 100;
-  position: fixed;
-  box-shadow: 0px 0px 24px var(--color-shadows);
+ .header {
+     background-color: var(--color-olive);
+     color: var(--color-gray-100);
+     padding: 1rem;
+     top: 0;
+     left: 0;
+     width: 100%;
+     z-index: 100;
+     position: fixed;
+     box-shadow: 0px 0px 24px var(--color-shadows);
 }
-
-.header__nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+ .header__nav {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
 }
-
-.header__list {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
+ .header__list {
+     list-style: none;
+     display: flex;
+     margin: 0;
+     padding: 0;
 }
-
-.header__item {
-  margin-left: 1rem;
-  display: inline-block;
+ .header__item {
+     margin-left: 1rem;
+     display: inline-block;
 }
-
-.header__item a {
-  color: var(--color-gray-100);
-  text-decoration: none;
-  padding: 1rem;
-  font-size: 1.5rem;
+ .header__item a {
+     color: var(--color-gray-100);
+     text-decoration: none;
+     padding: 1rem;
+     font-size: 1.5rem;
 }
-
-.header__item--home a {
-  font-weight: bold;
+ .header__item--home a {
+     font-weight: bold;
 }
-.header__item--logo {
-	font-weight: bold;
-	float: right;
+ .header__item--logo {
+     font-weight: bold;
+     float: right;
 }
-
 /* Botones hover */
-.header__item a:hover {
-  background-color: var(--color-gray-800);
+ .header__item a:hover {
+     background-color: var(--color-gray-800);
 }
-
 /* Footer */
-.footer {
-  background-color: var(--color-gray-800);
-  color: var(--color-gray-100);
-  padding: 1rem;
-  margin-top: 1rem;
-  left: 0;
-  width: 100%;
-  z-index: 100;
-  position: fixed;
-  bottom: 0;
-  box-shadow: 0px 0px 24px var(--color-shadows);
+ .footer {
+     background-color: var(--color-gray-800);
+     color: var(--color-gray-100);
+     padding: 1rem;
+     margin-top: 1rem;
+     left: 0;
+     width: 100%;
+     z-index: 100;
+     position: fixed;
+     bottom: 0;
+     box-shadow: 0px 0px 24px var(--color-shadows);
+}
+ .footer__wrapper {
+     max-width: 1200px;
+     margin: 0 auto;
+}
+ body {
+     background: linear-gradient(90deg, var(--color-blug), var(--color-greenc));
+}
+ .container {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     min-height: 100vh;
+}
+ .screen {
+     background: linear-gradient(90deg, var(--color-darker-blug), var(--color-blug));
+     position: relative;
+     height: 600px;
+     width: 450px;
+     box-shadow: 0px 0px 24px var(--color-shadows);
+}
+ .screen__content {
+     z-index: 1;
+     position: relative;
+     height: 100%;
+}
+ .screen__background {
+     position: absolute;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     z-index: 0;
+     -webkit-clip-path: inset(0 0 0 0);
+     clip-path: inset(0 0 0 0);
+}
+ .screen__background__shape {
+     transform: rotate(45deg);
+     position: absolute;
+}
+ .screen__background__shape1 {
+     height: 520px;
+     width: 520px;
+     background: #FFF;
+     top: -50px;
+     right: 120px;
+     border-radius: 72px;
+}
+ .screen__background__shape2 {
+     height: 220px;
+     width: 220px;
+     background: var(--color-middle);
+     top: -172px;
+     right: 0;
+     border-radius: 32px;
+}
+ .screen__background__shape3 {
+     height: 540px;
+     width: 190px;
+     background: linear-gradient(270deg,var(--color-darker-blug), var(--color-middle));
+     top: -24px;
+     right: 0;
+     border-radius: 32px;
+}
+ .screen__background__shape4 {
+     height: 400px;
+     width: 200px;
+     background: var(--color-middle);
+     top: 420px;
+     right: 50px;
+     border-radius: 60px;
+}
+ .login {
+     width: 400px;
+     padding: 30px;
+     padding-top: 180px;
+}
+ .login__field {
+     padding: 5px 0px;
+     position: relative;
+}
+ .login__icon {
+     position: absolute;
+     top: 30px;
+     color: var(--color-darker-blug);
+}
+ .login__input {
+     border: none;
+     border-bottom: 2px solid #D1D1D4;
+     background: none;
+     padding: 20px;
+     padding-left: 24px;
+     font-weight: 700;
+     width: 75%;
+     transition: .2s;
+}
+ .login__input:active, .login__input:focus, .login__input:hover {
+     outline: none;
+     border-bottom-color: var(--color-olive);
+}
+ .login__submit {
+     background: #fff;
+     font-size: 14px;
+     margin-top: 30px;
+     padding: 16px 20px;
+     border-radius: 26px;
+     border: 1px solid #d3e8e5;
+     text-transform: uppercase;
+     font-weight: 700;
+     display: flex;
+     align-items: center;
+     width: 100%;
+     color: var(--color-darker-blug);
+     box-shadow: 0px 2px 2px var(--color-middle);
+     cursor: pointer;
+     transition: .2s;
+}
+ .login__submit:active, .login__submit:focus, .login__submit:hover {
+     border-color: var(--color-middle);
+     outline: none;
+}
+ .button__icon {
+     font-size: 24px;
+     margin-left: auto;
+     color: var(--color-darker-blug);
+}
+ .social-login {
+     position: absolute;
+     height: 140px;
+     width: 160px;
+     text-align: center;
+     bottom: -10rem;
+     right: 0px;
+     color: #fff;
+}
+ .social-login__a {
+     padding: 2rem 0rem 0rem 0rem;
+     text-decoration: none;
+     color: #fff;
+     font-size: 1.5rem;
+	 border: white;
+}
+ .register {
+     width: 400px;
+     padding: 30px;
+     padding-top: 50px;
+}
+ .register__field {
+     padding: 10px 0px;
+     position: relative;
+}
+ .register__icon {
+     position: absolute;
+     top: 30px;
+     color: var(--color-darker-blug);
+}
+ .register__input {
+     border: none;
+     border-bottom: 2px solid #D1D1D4;
+     background: none;
+     padding: 10px;
+     padding-left: 24px;
+     font-weight: 700;
+     width: 75%;
+     transition: .2s;
+}
+ .register__input:active, .register__input:focus, .register__input:hover {
+     outline: none;
+     border-bottom-color: var(--color-olive);
+}
+ .register__submit {
+     background: #fff;
+     font-size: 14px;
+     margin-top: 30px;
+     padding: 16px 20px;
+     border-radius: 26px;
+     border: 1px solid #d3e8e5;
+     text-transform: uppercase;
+     font-weight: 700;
+     display: flex;
+     align-items: center;
+     width: 100%;
+     color: var(--color-darker-blug);
+     box-shadow: 0px 2px 2px var(--color-middle);
+     cursor: pointer;
+     transition: .2s;
+}
+ .register__submit:active, .register__submit:focus, .register__submit:hover {
+     border-color: var(--color-middle);
+     outline: none;
+}
+ .register__select {
+     border: none;
+     border-bottom: 2px solid #D1D1D4;
+     background: none;
+     padding: 10px;
+     padding-left: 24px;
+     font-weight: 700;
+     width: 75%;
+     transition: .2s;
+     appearance: none;
+    /* Oculta la apariencia nativa del menú desplegable */
+     -moz-appearance: none;
+     -webkit-appearance: none;
+}
+ .register__select::after {
+     content: '\f078';
+     font-family: 'Font Awesome 5 Free';
+     position: absolute;
+     top: 50%;
+     right: 10px;
+     transform: translateY(-50%);
+     font-size: 14px;
+     color: var(--color-darker-blug);
+     pointer-events: none;
+}
+ .name-group {
+     display: flex;
+     flex-direction: row;
+}
+ .identification-group {
+     display: flex;
+     flex-direction: row;
 }
 
-.footer__wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-body {
-	background: linear-gradient(90deg, var(--color-blug), var(--color-greenc));		
-}
-
-.container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 100vh;
-}
-
-.screen {		
-	background: linear-gradient(90deg, var(--color-darker-blug), var(--color-blug));		
-	position: relative;	
-	height: 600px;
-	width: 360px;	
-	box-shadow: 0px 0px 24px var(--color-shadows);
-}
-
-.screen__content {
-	z-index: 1;
-	position: relative;	
-	height: 100%;
-}
-
-.screen__background {		
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 0;
-	-webkit-clip-path: inset(0 0 0 0);
-	clip-path: inset(0 0 0 0);	
-}
-
-.screen__background__shape {
-	transform: rotate(45deg);
-	position: absolute;
-}
-
-.screen__background__shape1 {
-	height: 520px;
-	width: 520px;
-	background: #FFF;	
-	top: -50px;
-	right: 120px;	
-	border-radius: 0 72px 0 0;
-}
-
-.screen__background__shape2 {
-	height: 220px;
-	width: 220px;
-	background: var(--color-middle);	
-	top: -172px;
-	right: 0;	
-	border-radius: 32px;
-}
-
-.screen__background__shape3 {
-	height: 540px;
-	width: 190px;
-	background: linear-gradient(270deg,var(--color-darker-blug), var(--color-middle));
-	top: -24px;
-	right: 0;	
-	border-radius: 32px;
-}
-
-.screen__background__shape4 {
-	height: 400px;
-	width: 200px;
-	background: var(--color-middle);	
-	top: 420px;
-	right: 50px;	
-	border-radius: 60px;
-}
-
-.login {
-	width: 320px;
-	padding: 30px;
-	padding-top: 156px;
-}
-
-.login__field {
-	padding: 20px 0px;	
-	position: relative;	
-}
-
-.login__icon {
-	position: absolute;
-	top: 30px;
-	color: var(--color-darker-blug);
-}
-
-.login__input {
-	border: none;
-	border-bottom: 2px solid #D1D1D4;
-	background: none;
-	padding: 10px;
-	padding-left: 24px;
-	font-weight: 700;
-	width: 75%;
-	transition: .2s;
-}
-
-.login__input:active,
-.login__input:focus,
-.login__input:hover {
-	outline: none;
-	border-bottom-color: var(--color-olive);
-}
-
-.login__submit {
-	background: #fff;
-	font-size: 14px;
-	margin-top: 30px;
-	padding: 16px 20px;
-	border-radius: 26px;
-	border: 1px solid #d3e8e5;
-	text-transform: uppercase;
-	font-weight: 700;
-	display: flex;
-	align-items: center;
-	width: 100%;
-	color: var(--color-darker-blug);
-	box-shadow: 0px 2px 2px var(--color-middle);
-	cursor: pointer;
-	transition: .2s;
-}
-
-.login__submit:active,
-.login__submit:focus,
-.login__submit:hover {
-	border-color: var(--color-middle);
-	outline: none;
-}
-
-.button__icon {
-	font-size: 24px;
-	margin-left: auto;
-	color: var(--color-darker-blug);
-}
-
-.social-login {	
-	position: absolute;
-	height: 140px;
-	width: 160px;
-	text-align: center;
-	bottom: -6rem;
-	right: 0px;
-	color: #fff;
-}
-
-.social-login__a {
-	padding: 2rem 0rem 0rem 0rem;
-	text-decoration: none;
-	color: #fff;
-	font-size: 1.5rem;
-}
-
-.register {
-    width: 320px;
-    padding: 30px;
-    padding-top: 50px;
-}
-
-.register__field {
-    padding: 20px 0px;	
-    position: relative;	
-}
-
-.register__icon {
-    position: absolute;
-    top: 30px;
-    color: var(--color-darker-blug);
-}
-
-.register__input {
-    border: none;
-    border-bottom: 2px solid #D1D1D4;
-    background: none;
-    padding: 10px;
-    padding-left: 24px;
-    font-weight: 700;
-    width: 75%;
-    transition: .2s;
-}
-
-.register__input:active,
-.register__input:focus,
-.register__input:hover {
-    outline: none;
-    border-bottom-color: var(--color-olive);
-}
-
-.register__submit {
-    background: #fff;
-	font-size: 14px;
-	margin-top: 30px;
-	padding: 16px 20px;
-	border-radius: 26px;
-	border: 1px solid #d3e8e5;
-	text-transform: uppercase;
-	font-weight: 700;
-	display: flex;
-	align-items: center;
-	width: 100%;
-	color: var(--color-darker-blug);
-	box-shadow: 0px 2px 2px var(--color-middle);
-	cursor: pointer;
-	transition: .2s;
-}
-
-.register__submit:active,
-.register__submit:focus,
-.register__submit:hover {
-border-color: var(--color-middle);
-outline: none;
-}
-
-.button__icon {
-font-size: 24px;
-margin-left: auto;
-color: var(--color-darker-blug);
-}
+.register__select--icon_dropdown {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23D1D1D4' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+	background-repeat: no-repeat;
+	background-position: right 0.7em center;
+	background-size: 1em auto;
+	padding-right: 2em;
+  }
+  
+  .register__select--dropdown {
+	padding-right: 0; /* Aumenta el padding para hacer espacio para el ícono */
+  }
