--- a/PetAdoptionHouse/index/templates/index/login.html
+++ b/PetAdoptionHouse/index/templates/index/login.html
@@ -4,35 +4,36 @@
     {% if error %}
         <p class="error"> {{ error }}</p>
     {% endif %}
-        <div class="container">
-            <div class="screen">
-                <div class="screen__content">
-                    <form class="login" method="POST">
-                        {% csrf_token %}
-                        <div class="login__field">
-                            <i class="login__icon fas fa-user"></i>
-                            <input name="username" type="text" class="login__input" placeholder="Email">
+        {% if user.is_authenticated %}{% endif %}
+            <div class="container">
+                <div class="screen">
+                    <div class="screen__content">
+                        <form class="login" method="POST">
+                            {% csrf_token %}
+                            <div class="login__field">
+                                <i class="login__icon fas fa-user"></i>
+                                <input name="username" type="text" class="login__input" placeholder="Email">
+                            </div>
+                            <div class="login__field">
+                                <i class="login__icon fas fa-lock"></i>
+                                <input name="password" type="password" class="login__input" placeholder="Password">
+                            </div>
+                            <button class="button login__submit" type="submit">
+                                <span class="button__text">Log In</span>
+                                <i class="button__icon fas fa-chevron-right"></i>
+                            </button>
+                            {{ form.errors }}			
+                        </form>
+                        <div class="social-login">
+                            <a class="social-login__a" href="register">Register</a>
                         </div>
-                        <div class="login__field">
-                            <i class="login__icon fas fa-lock"></i>
-                            <input name="password" type="password" class="login__input" placeholder="Password">
-                        </div>
-                        <button class="button login__submit" type="submit">
-                            <span class="button__text">Log In</span>
-                            <i class="button__icon fas fa-chevron-right"></i>
-                        </button>
-                        {{ form.errors }}			
-                    </form>
-                    <div class="social-login">
-                        <a class="social-login__a" href="register">Register</a>
                     </div>
+                    <div class="screen__background">
+                        <span class="screen__background__shape screen__background__shape4"></span>
+                        <span class="screen__background__shape screen__background__shape3"></span>		
+                        <span class="screen__background__shape screen__background__shape2"></span>
+                        <span class="screen__background__shape screen__background__shape1"></span>
+                    </div>		
                 </div>
-                <div class="screen__background">
-                    <span class="screen__background__shape screen__background__shape4"></span>
-                    <span class="screen__background__shape screen__background__shape3"></span>		
-                    <span class="screen__background__shape screen__background__shape2"></span>
-                    <span class="screen__background__shape screen__background__shape1"></span>
-                </div>		
             </div>
-        </div>
 {%endblock content %}
