--- a/PetAdoptionHouse/index/templates/index/static/styles.css
+++ b/PetAdoptionHouse/index/templates/index/static/styles.css
@@ -15,7 +15,7 @@
 }
 /* Colores */
  :root {
-     --color-olive: #1d5a55;
+     --color-olive: #155751;
      --color-gray-100: #f7fafc;
      --color-gray-200: #edf2f7;
      --color-gray-300: #e2e8f0;
