Added redirection from main page to index/ page

--- a/PetAdoptionHouse/index/templates/index/base.html
+++ b/PetAdoptionHouse/index/templates/index/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}{% endblock title %}</title>
-  <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'index/static/styles.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -19,7 +19,6 @@
         {% if user.is_authenticated %}
         <li class="header__item header__item--logout"><a href="{% url 'logout' %}">Log Out</a></li>
         {% else %}
-        
         <li class="header__item header__item--login"><a href="{% url 'login' %}">Log In</a></li>
         {% endif %}
 
