Added adoption request and created the first adoption succesfully

--- a/PetAdoptionHouse/index/templates/index/catalogue.html
+++ b/PetAdoptionHouse/index/templates/index/catalogue.html
@@ -14,7 +14,7 @@
                                 <h2 class="pet_card--name">{{ pet.name }} {{ pet.lastname }}</h2>
                                 <p class="pet_card--info">Age: {{ pet.get_age }}</p>
                                 <p class="pet_card--info">Species: {{ pet.species.name }}</p>
-                                <p class="pet_card--info">Breed: {{ pet.species.breed.name }}</p>
+                                <p class="pet_card--info">Breed: {{ pet.breed.name }}</p>
                             </div>
                         </a>
                     </div>
