--- a/PetAdoptionHouse/index/static/index/static/styles.css
+++ b/PetAdoptionHouse/index/static/index/static/styles.css
@@ -77,19 +77,22 @@
  .header__item a:hover {
      background-color: var(--color-gray-800);
 }
-.footer {
-  background-color: var(--color-gray-800);
-  color: var(--color-gray-100);
-  padding: 1rem;
-  margin-top: 1rem; /* Agrega un margen superior para separar el contenido del pie de página */
-  box-shadow: 0px 0px 24px var(--color-shadows);
+ .footer {
+     background-color: var(--color-gray-800);
+     color: var(--color-gray-100);
+     padding: 1rem;
+     margin-top: 1rem;
+     left: 0;
+     width: 100%;
+     z-index: 100;
+     position: fixed;
+     bottom: 0;
+     box-shadow: 0px 0px 24px var(--color-shadows);
 }
-
-.footer__wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
+ .footer__wrapper {
+     max-width: 1200px;
+     margin: 0 auto;
 }
-
  body {
      background: linear-gradient(90deg, var(--color-blug), var(--color-greenc));
 }
