--- a/PetAdoptionHouse/index/templates/index/register.html
+++ b/PetAdoptionHouse/index/templates/index/register.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="register__field">
                         <i class="login__icon fas fa-map-marker-alt"></i>
-                        <input name="address" type="text" class="register__input" placeholder="Address">
+                        <input name="adress" type="text" class="register__input" placeholder="Address">
                     </div>
                     <div class="identification-group">
                         <div class="register__field">
