--- a/PetAdoptionHouse/index/templates/index/base.html
+++ b/PetAdoptionHouse/index/templates/index/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{% block title %}{% endblock title %}</title>
+  <title>Pet Adoption House</title>
   <link rel="stylesheet" type="text/css" href="{% static 'index/static/styles.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
