--- a/PetAdoptionHouse/index/static/index/static/styles.css
+++ b/PetAdoptionHouse/index/static/index/static/styles.css
@@ -283,7 +283,7 @@
      border: none;
      border-bottom: 2px solid var(--color-gray-400);
      background: none;
-     padding: 10px;
+     padding: 9px;
      font-weight: 700;
      width: 75%;
      transition: .2s;
@@ -317,7 +317,7 @@
   }
   
   .register__select--dropdown {
-	padding-right: 2.5rem;
+	margin: 0 1rem 0 1rem;
   }
 
   .pet-grid {
